# stamp-bot

./: button.js  package.json  run.sh  start.js
config/: confog.js
models/: model.dir.js  model.photo.js
ocv/: CMakeLists.txt  install.sh
ocv/src/: cvstamp.cpp  cvstamp.h  main.cpp
